--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "milon/barcode": "^10.0",
-        "rap2hpoutre/fast-excel": "^5.3"
+        "rap2hpoutre/fast-excel": "^5.3",
+        "spatie/laravel-activitylog": "^4.7"
     },
     "require-dev": {
         "backpack/generators": "^4.0",
